--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -127,15 +127,14 @@ main {
 }
 
 #copyright{
-	/*font-family:'Gotham-Bold';*/
-	/*font-size: 10px;*/
+	font-family:'Gotham-Bold';
+	font-size: 10px;
 	color: #74B62F;
 	padding-top: 20px;
 	margin-top: 20px;
 }
 
 /* STYLE COMPTE A REBOURS PROCHAINE EDITION */
-
 
 #countdown p.numbers{
 	font-size: 5em;
@@ -146,31 +145,10 @@ main {
 	color: rgba(255,255,255,1);
 }
 
-/* countdown styles */
 
-div#countdown{color: #353535;}
-
-/*div#countdown p{
-	width:90%;
-	display: inline-block;
-	text-align: center;
-}*/
-
-/*#countdown p.numbers{*/
-/*	width: 90%;*/
-/*	height: 85%;*/
-/*	background: #FFFFFF;*/
-/*	margin-top: -25px;*/
-/*	padding-top: 100px;*/
-/*}*/
-
-/*#countdown p.strings{*/
-/*	width: 90%;*/
-/*	height: auto;*/
-/*	padding: 30px 0;*/
-/*	background: rgba(116, 182, 47,1);*/
-/*	color: #FFFFFF;*/
-/*}*/
+#countdown{
+	color: #353535;
+}
 
 #countdown div.cd-box{
 	position: relative;
@@ -178,11 +156,6 @@ div#countdown{color: #353535;}
 	box-sizing: border-box;
 	margin-top: 10px;
 	margin-bottom: 5px;
-	/*-webkit-box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);
-	-moz-box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);
-	box-shadow: 5px 6px 9px 1px rgba(53, 53, 53, 0.5);*/
-	/*http://codepen.io/janoschvg/pen/QwmdwY*/
-	/*http://codepen.io/ewganoel/pen/AIGcE*/
 }
 
 #countdown .cd-box .numberContainer {
@@ -190,8 +163,6 @@ div#countdown{color: #353535;}
 	width: 100%;
 	height: 100%;
 	padding-top: 60px;
-	/*border: 3px solid rgba(116, 182, 47,0.8);*/
-	
 	background: -webkit-linear-gradient(rgba(255, 255, 255,0.6) 30%, rgba(255, 255, 255,0.8) 60%, rgba(255, 255, 255,1)); /* Safari 5.1-6.0 */
 	background: -o--linear-gradient(rgba(255, 255, 255,0.6) 30%, rgba(255, 255, 255,0.8) 60%, rgba(255, 255, 255,1)); /* For Opera 11.6-12.0 */
 	background: -moz--linear-gradient(rgba(255, 255, 255,0.6) 30%, rgba(255, 255, 255,0.8) 60%, rgba(255, 255, 255,1)); /* For Firefox 3.6-15 */
