pleins de changements
reintegration balises footer
flex section edition courante terminé
css et html classement equipages corrigés

--- a/public/assets/css/sections/currentEdition.css
+++ b/public/assets/css/sections/currentEdition.css
@@ -36,9 +36,12 @@
 }
 
 #currentEdition #parcours {
-  position: relative;
+  flex: 0;
 }
 
 #currentEdition #map {
+  flex: 1;
+  width: 100%;
+  min-height: 200px;
 }
 
