--- a/public/assets/css/sections/contact.css
+++ b/public/assets/css/sections/contact.css
@@ -89,4 +89,9 @@
   background: -o--linear-gradient(rgba(206, 86, 69,1) 10%, rgba(206, 86, 69,0.5)); /* For Opera 11.6-12.0 */
   background: -moz--linear-gradient(rgba(206, 86, 69,1) 10%, rgba(206, 86, 69,0.5)); /* For Firefox 3.6-15 */
   background: linear-gradient(rgba(206, 86, 69,1) 10%, rgba(206, 86, 69,0.5)); /* Standard syntax */
+  padding-bottom: 0px;
+}
+
+#contact .title {
+  padding-bottom: 20px;
 }
