--- a/test/classement.css
+++ b/test/classement.css
@@ -1,12 +1,14 @@
 /*css provisoire test classement*/
 .classement {
-     /*background-color: rgba(0,0,0,0.3);*/
+     /*background-color: rgba(255,255,255,0.0);*/
      /*background-color: rgba(116,182,47,0.6);*/
      padding: 0;
      border-radius: 1vh 1vh 0 0;
      position: relative;
-
-     
+     background-image: url("./img/fond-voiture-clair.jpg");
+     background-position: center center;
+     background-repeat: no-repeat;
+     background-size: auto 100%;
 }
 
 .barProgress {
@@ -55,7 +57,7 @@
     padding: 5px;
     /*border-bottom: 2px solid white;*/
     /*border-radius: 1vh;*/
-    margin-bottom: 0.5vh;
+    margin-top: 0.5vh;
     background-color: rgba(116,182,47,0.6);
 
 }
@@ -190,7 +192,7 @@
     padding: 5px;
     /*border-bottom: 2px solid white;*/
     border-radius: 1vh 1vh 0 0;
-    margin-bottom: 0.5vh;
+    /*margin-bottom: 0.5vh;*/
     background-color: rgba(0,0,0,0.8);
     color: #74b62f;
     font-size: 2.6vh;
