--- a/public/assets/css/sections/currentEdition.css
+++ b/public/assets/css/sections/currentEdition.css
@@ -24,7 +24,7 @@
     z-index: 99999;
     width: 100%;
     height: 100%;
-    background: rgba(255,255,255,1);
+    /*background: rgba(255,255,255,1);*/
 }
 
 #currentEdition .grad {
