--- a/test/classement.css
+++ b/test/classement.css
@@ -8,7 +8,7 @@
      background-image: url("./img/fond-voiture-clair.jpg");
      background-position: center center;
      background-repeat: no-repeat;
-     background-size: auto 100%;
+     background-size: cover;
 }
 
 .barProgress {
