--- a/public/assets/css/sections/revuedepresse.css
+++ b/public/assets/css/sections/revuedepresse.css
@@ -194,6 +194,14 @@
     background-image: url("../../img/img-revuPress/challengeTotem4.jpg");
 }
 
+#revuedepresse .grad {
+  background:rgba(253,235,26,1); /* For browsers that do not support gradients */
+  background: -webkit-linear-gradient(rgba(253,235,26,1) 10%, rgba(253,235,26,0.5)); /* Safari 5.1-6.0 */
+  background: -o--linear-gradient(rgba(253,235,26,1) 10%, rgba(253,235,26,0.5)); /* For Opera 11.6-12.0 */
+  background: -moz--linear-gradient(rgba(253,235,26,1) 10%, rgba(253,235,26,0.5)); /* For Firefox 3.6-15 */
+  background: linear-gradient(rgba(253,235,26,1) 10%, rgba(253,235,26,0.5)); /* Standard syntax */
+}
+
 @media (min-width: 992px) { 
 	#myCarousel {padding-right:33.3333%;}
 	#myCarousel .carousel-controls {display:none;} 	
