--- a/public/assets/css/components/footer.css
+++ b/public/assets/css/components/footer.css
@@ -43,6 +43,13 @@ footer ul {
 	/*font-family:'Gotham-Bold';*/
 }
 
+.footerInfo a {
+}
+
+.footerInfo a:hover {
+	text-decoration-line: none !important;
+}
+
 .social {
 	list-style-type: none;
 }
@@ -96,6 +103,7 @@ footer a {
 	margin-top: 20px;
 	position: relative;
 	padding-top: 20px;
+	padding-bottom: 10px;
 }
 
 .iconInfo {
