--- a/public/assets/css/sections/lastEdition.css
+++ b/public/assets/css/sections/lastEdition.css
@@ -20,7 +20,8 @@
 }
 
 .single{
-    height:20em;
+    /*height:20em;*/
+    flex-grow: 1;
 }
 
 .features{
@@ -30,22 +31,23 @@
 }
 
 .features .single {
-    background: rgba(255, 255, 255, 0.1);
-    border: 1px solid rgba(255, 255, 255, 0.1);
+    background: rgba(255, 255, 255, 0.5);
+    /*border: 1px solid rgba(255, 255, 255, 0.1);*/
     text-align: center;
     position: relative;
-    padding: 15px 15px;
-    margin: 50px auto 80px auto;
+    padding: 15px 15px 25px 15px;
+    margin: 15px auto 15px auto;
     -webkit-transition: 0.4s ease-in-out;
     -moz-transition: 0.4s ease-in-out;
     -ms-transition: 0.4s ease-in-out;
     transition: 0.4s ease-in-out; 
+    width: 100%;
 }
 
 .features .single h2 {
     /*font-size: 20px;*/
     text-transform: uppercase;
-    color: #FDEB1A;
+    color: rgba(52, 52, 52, 1);
     margin-bottom: 20px;
     margin-top: 80px; 
 }
@@ -61,48 +63,27 @@
 }
 
 .features .single p{
-    color: rgba(255, 255, 255, 0.7);
+    color: rgba(52, 52, 52, 1);
     text-align: center;
-    /*font-size: 14px;*/
-    /*line-height: 24px;*/
 }
 
-.features .single .icon-outer {
-    position: absolute;
-    width: 100px;
-    height: 100px;
-    /*-webkit-transform: rotate(45deg);
-    -moz-transform: rotate(45deg);
-    -ms-transform: rotate(45deg);*/
-    transform: translate(-50%);
-    top: 0;
-    /*margin-top: -50px;*/
-    left: 50%;
-   /* margin-left: -50px;*/
-    -webkit-transition: 0.4s ease-in-out;
-    -moz-transition: 0.4s ease-in-out;
-    -ms-transition: 0.4s ease-in-out;
-    transition: 0.4s ease-in-out;
-    border-radius: 50%;
+.features .icon-outer {
+    width: 80px;
+    height: 80px;
+    margin: 0 auto;
 }
 
-.features .single .icon-outer .icon {
+.features .icon-outer .icon {
     width: 60px;
     height: 60px;
-    /*margin: 0px auto;*/
     margin: 0px auto;
     vertical-align: middle;
     transform: translateY(50%);
 }
 
-.features .single .icon-outer .icon i {
-    /*-webkit-transform: rotate(-45deg);
-    -moz-transform: rotate(-45deg);
-    -ms-transform: rotate(-45deg);
-    transform: rotate(-45deg);*/
-    /*color: #fff;*/
-    color: rgba(253,235,26,1);
-    /*font-size: 2.4rem;*/
+.features .icon-outer .icon i {
+    color: rgba(52, 52, 52, 1);
+    font-size: 4rem;
 }
 
 .features .single:hover {
@@ -110,21 +91,20 @@
 }
 
 .features .single:hover h2 {
-    color: #fff; 
+    /*color: rgba(255, 255, 255, 1);*/
+    color: rgba(253,235,26,1);
 }
 
 .features .single:hover h2:after {
-    border-color: rgba(255, 255, 255, 0.3); 
+    border-color: rgba(255, 255, 255, 1);
+}
+
+.features .single h2:after {
+    border-color: rgba(52, 52, 52, 1);
 }
 
 .features .single:hover p {
-    color: rgba(255, 255, 255, 0.8); 
-}
-
-.features .single:hover .icon-outer {
-    background: #FDEB1A;
-    border: none;
-    margin-top: -60px;
+    color: rgba(255, 255, 255, 1); 
 }
 
 .features .single:hover .icon-outer .icon {
@@ -132,18 +112,13 @@
 }
 
 .features .single:hover .icon-outer .icon i {
-    /*color: white;*/
-    color: rgba(102, 183, 176,1);
+    /*color: rgba(255, 255, 255, 1);*/
+    color: rgba(253,235,26,1);
 }
-
-/*.row h2 {*/
-/*    text-align: center;*/
-/*    color: rgba(255, 255, 255, 0.9);*/
-/*}*/
 
 /************* links photos & partenaires 2016  *************/
 
-.icon span {
+.call-to-action .icon span{
     display:block;
     text-align:center;
     /*font-size: 16px;*/
@@ -151,7 +126,8 @@
     margin-top:5px;
     margin-left: 5px;
     margin-right: 5px;
-    color:white;
+    /*color:white;*/
+    color: rgba(52, 52, 52, 1);
 }
 
 .call-to-action {
@@ -160,16 +136,14 @@
 
 .call-to-action a {
     color: white;
+    
 }
 
 .call-to-action a>i {
-    color: white;
-    /*font-size: 4.8rem;*/
+    color: rgba(52, 52, 52, 1);
+    font-size: 4.8rem;
 }
 
-.bg-dark h2 {
-    margin-bottom: 20px;
-}
 
 #lastEdition h1 {
     color: white;
@@ -181,4 +155,5 @@
   background: -o--linear-gradient(rgba(102, 183, 176,1) 10%, rgba(102, 183, 176,0.5)); /* For Opera 11.6-12.0 */
   background: -moz--linear-gradient(rgba(102, 183, 176,1) 10%, rgba(102, 183, 176,0.5)); /* For Firefox 3.6-15 */
   background: linear-gradient(rgba(102, 183, 176,1) 10%, rgba(102, 183, 176,0.5)); /* Standard syntax */
+}
 
