--- a/public/assets/css/components/sidenav.css
+++ b/public/assets/css/components/sidenav.css
@@ -3,11 +3,11 @@
 	top: 0;
 	right: 0;
 	width: 20vw;
-	height: 20vh;
+	height: 100vh;
 	z-index: 9999;
 	background: #fff;
 	padding: 2em;
-	transform: translateY(-20vw);
+	transform: translateX(20vw);
 	transition: all .4s ease-out;
 }
 
@@ -16,11 +16,11 @@
 	top: 0;
 	right: 0;
 	width: 30vw;
-	height: 20vh;
+	height: 200vh;
 	z-index: 9999;
 	background: #fff;
 	padding: 2em;
-	transform: translateY(-20vw);
+	transform: translateX(30vw);
 	transition: all .4s ease-out;
 }
 
@@ -33,12 +33,12 @@
 }
 
 .slideLeft {
-    transform: translateY(0vw)!important;
+    transform: translateX(0vw)!important;
     transition: all .2s ease-in;
 }
 
 .slideFullScreen {
-	transform: translateY(0vw)!important;
+	transform: translateX(0vw)!important;
     transition: all .2s ease-in;
 }
 
