--- a/public/assets/css/components/sidenav.css
+++ b/public/assets/css/components/sidenav.css
@@ -3,7 +3,7 @@
 	top: 0;
 	right: 0;
 	width: 20vw;
-	height: 20vh;
+	// height: 20vh;
 	z-index: 9999;
 	background: #fff;
 	padding: 2em;
@@ -16,11 +16,11 @@
 	top: 0;
 	right: 0;
 	width: 30vw;
-	height: 200vh;
+	// height: 200vh;
 	z-index: 9999;
 	background: #fff;
 	padding: 2em;
-	transform: translateX(30vw);
+	transform: translateY(-30vw);
 	transition: all .4s ease-out;
 }
 
