--- a/public/assets/css/components/sidenav.css
+++ b/public/assets/css/components/sidenav.css
@@ -1,14 +1,16 @@
 #sidenav-seconnecter {
-    position: absolute;
-	top: 0;
+    /*position: absolute;*/
+    position: relative;
+	/*top: 0;
 	right: 0;
 	width: 20vw;
-	// height: 20vh;
-	z-index: 9999;
+	height: 100vh;
+	z-index: 9999;*/
 	background: #fff;
 	padding: 2em;
-	transform: translateY(-20vw);
+	/*transform: translateX(20vw);*/
 	transition: all .4s ease-out;
+	height: 0;
 }
 
 #sidenav-participer {
@@ -16,11 +18,11 @@
 	top: 0;
 	right: 0;
 	width: 30vw;
-	// height: 200vh;
+	height: 200vh;
 	z-index: 9999;
 	background: #fff;
 	padding: 2em;
-	transform: translateY(-30vw);
+	transform: translateX(30vw);
 	transition: all .4s ease-out;
 }
 
@@ -34,6 +36,11 @@
 
 .slideLeft {
     transform: translateX(0vw)!important;
+    transition: all .2s ease-in;
+}
+
+.expand {
+    height: auto;
     transition: all .2s ease-in;
 }
 
