--- a/public/assets/css/components/navigation.css
+++ b/public/assets/css/components/navigation.css
@@ -47,11 +47,13 @@
 	position: fixed!important;
 	top: 0;
 	left: 0;
-	/*font-size: 1.2rem;*/
+	font-size: 1.2rem;
 	padding: 0;
 	height: 50px!important;
 	background: rgba(26, 188, 156,.5);
 	transition: all .4s ease;
+	margin-top: 50px;
+
 }
 
 #nav-onepage .navbar-li-fixed a {
