--- a/public/assets/css/sections/home-video.css
+++ b/public/assets/css/sections/home-video.css
@@ -4,7 +4,7 @@
     background-size: cover;
     min-width: 100vw;
     min-height: 100vh;
-    padding: 20px;
+    padding: 50px 20px 20px 20px;
 }
 
 #header video { 
