--- a/public/assets/css/sections/home-video.css
+++ b/public/assets/css/sections/home-video.css
@@ -22,13 +22,14 @@
 }
 
 #header .navbar {
-    background: none;
+    /*background: none;*/
+    background: rgba(0,0,0,.5);
     border: none;
 }
 
 #header .navbar .nav>li>a {
     color: white;
-    /*font-size: 1.4rem;*/
+    font-size: 1.3em;
     transition: all .2s ease;
 }
 
