--- a/public/assets/css/components/navigation.css
+++ b/public/assets/css/components/navigation.css
@@ -18,6 +18,7 @@
 #nav-onepage.navbar-onepage {
     background: rgba(0,0,0,.5);
     border: none;
+    border-radius:0 !important;
 }
 
 #nav-onepage .navbar-onepage li {
@@ -29,7 +30,7 @@
 
 .navbar-scroll li a {
     color: #cbf723!important;
-    /*font-size: 1.2rem;*/
+    font-size: 1.3em;
     padding: .9em 1.2em;
     /*font-weight: normal;*/
 }
@@ -47,17 +48,17 @@
 	position: fixed!important;
 	top: 0;
 	left: 0;
-	font-size: 1.2rem;
+	font-size: 1.5rem;
 	padding: 0;
 	height: 50px!important;
-	background: rgba(26, 188, 156,.5);
+	background: rgba(0,0,0,.5) !important;
 	transition: all .4s ease;
 	margin-top: 50px;
 
 }
 
 #nav-onepage .navbar-li-fixed a {
-    /*font-size: 1.2rem!important;*/
+    font-size: 1.3em !important;
     transition: all .4s ease;
     padding: .9em!important;
 }
@@ -76,4 +77,12 @@
 }
 #header-hamburger .icon-bar{
 	background-color: white;
+}
+
+#navbar-collapse {
+}
+
+#navbar-collapse ul li {
+	text-align: right;
+	/*background: rgba(0,0,0,.5);*/
 }
