--- a/public/assets/css/pages/backHome.css
+++ b/public/assets/css/pages/backHome.css
@@ -54,6 +54,7 @@ top: 0;
 	background-color: #282b30;
 	color: white;
 	height: 50px;
+	border-bottom: 1px solid white;
 }
 
 #top-infos navbar-header{
@@ -92,4 +93,11 @@ top: 0;
 
 #top-indicators::after, #back-organisation::after, #back-logout::after, #back-welcome::after, #back-title::after {
 clear: both;
+}
+
+#nav-sidebar {
+	width: 300px;
+	height: 100%;
+	background-color: #282b30;
+	color: white;
 }
