--- a/public/assets/css/pages/backHome.css
+++ b/public/assets/css/pages/backHome.css
@@ -1,23 +1,27 @@
 * {
-box-sizing: border-box;
+	box-sizing: border-box !important;
+}
+
+#top-infos .navbar-header {
+	float: none;
 }
 
 #top-indicators {
-list-style: none;
-float: left;
-padding-top: 6px;
-vertical-align: middle;
+	list-style: none;
+	float: left;
+	padding-top: 6px;
+	vertical-align: middle;
 }
 
 #top-right-infos {
-list-style: none;
-float: right !important;
-padding-top: 6px;
-vertical-align: middle;
+	list-style: none;
+	float: right !important;
+	padding-top: 6px;
+	vertical-align: middle;
 }
 
 #top-right-infos li {
-	display: inline-block;
+	display: block;
 	position: relative;
 	color: white;
 	padding: 5px 30px 10px 10px;
@@ -25,8 +29,8 @@ vertical-align: middle;
 
 
 #top-indicators::before, #back-organisation::before, #back-logout::before, #back-welcome::before, #back-title::before {
-content: " ";
-display: table;
+	content: " ";
+	display: table;
 }
 
 #top-indicators li {
@@ -43,17 +47,16 @@ display: table;
 }
 
 #top-indicators .badge {
-background-color: #337ab7;
-margin-bottom: 5px;
-position: absolute;
-top: 0;
-
+	background-color: #337ab7;
+	margin-bottom: 5px;
+	position: absolute;
+	top: 0;
 }
 
 #top-infos {
 	background-color: #282b30;
 	color: white;
-	height: 50px;
+	/*height: 50px;*/
 	border-bottom: 1px solid white;
 }
 
@@ -96,8 +99,102 @@ clear: both;
 }
 
 #nav-sidebar {
-	width: 300px;
-	height: 100%;
-	background-color: #282b30;
+	/*height: 100%;*/
+	background-color: rgba(0,0,0,.9);
 	color: white;
 }
+
+#nav-sidebar.navbar{
+	margin-bottom: 0;
+	border-bottom: 1px solid rgba(116, 182, 47,1);
+}
+
+#nav-sidebar.navbar, #nav-sidebar .navbar{
+	border-radius: 0;
+}
+
+#nav-sidebar .navbar-toggle {
+	border: 2px solid rgba(116, 182, 47,1);
+}
+
+#nav-sidebar .navbar-toggle .icon-bar{
+	background-color: rgba(116, 182, 47,1);
+}
+
+#nav-sidebar ul{
+	list-style: none;
+}
+
+#nav-sidebar-collapse .navbar-nav>li>a{
+	color: rgba(116, 182, 47,1);
+}
+
+#nav-sidebar-collapse .navbar-nav>li>a:hover{
+	background-color: rgba(255, 255, 255,0.1);
+}
+
+#back-content {
+	background-color: rgba(0,0,0,.8);
+	padding-bottom: 15px;
+	padding-top: 15px;
+}
+
+#back-content h3{
+	color: rgba(116, 182, 47,1);
+}
+.encart {
+	border: 1px solid rgba(116, 182, 47,1);
+	/*border: 1px solid white;*/
+	border-radius: 6px;
+	padding: 15px;
+	color: white;
+	margin: 5px;
+	flex: 1;
+}
+
+#main.container {
+	padding: 0px !important;
+	margin: 0 !important;
+	width: 100%;
+}
+
+#main .row {
+	padding: 0px !important;
+	margin: 0 !important;
+}
+
+#back-content ul li {
+	display: inline-block;
+	position: relative;
+	color: white;
+	padding: 10px 30px 10px 10px;
+}
+
+#back-content .badge {
+	margin-bottom: 5px;
+	position: absolute;
+	top: 0;
+}
+
+.badge-vert {
+	background-color: rgb(63, 142, 11);
+}
+
+.badge-bleu {
+	background-color: #337ab7;
+}
+
+.badge-orange {
+	background-color: rgb(242, 121, 21);
+}
+
+.badge-rouge {
+	background-color: red;
+}
+
+#main {
+	clear: both;
+}
+
+
+
