--- a/public/assets/css/pages/lastEdition-photos.css
+++ b/public/assets/css/pages/lastEdition-photos.css
@@ -1,4 +1,18 @@
+.gallery
+{
+    display: inline-block;
+    margin-top: 20px;
+    background-color: rgba(255,255,255,0.5);
+}
 
+.vignette {
+	padding-top: 15px;
+	padding-bottom: 15px;
+}
+
+.titre-galerie {
+	color: rgba(52, 52, 52, 1) !important;
+}
 
 
 
