--- a/public/assets/css/pages/profile.css
+++ b/public/assets/css/pages/profile.css
@@ -240,3 +240,7 @@
 }
 
 #profile .btn{ border-radius: 50%; width:32px; height:32px; line-height:18px;  }
+
+#fiche-user {
+    text-align: right;
+}
