--- a/public/assets/css/sections/lastEdition.css
+++ b/public/assets/css/sections/lastEdition.css
@@ -138,6 +138,19 @@
 .call-to-action a i {
     color: rgba(52, 52, 52, 1);
     font-size: 4.8rem;
+    transition: transform 0.5s ease;
+    -moz-transition: transform 0.5s ease;
+    -webkit-transition: transform 0.5s ease;
+    -ms-transition: transform 0.5s ease;
+    -o-transition: transform 0.5s ease;
+}
+
+.call-to-action a i:hover {
+    ransform: scale(1.3);
+    -webkit-transform: scale(1.3);
+    -moz-transform: scale(1.3);
+    -ms-transform: scale(1.3);
+    -o-transform: scale(1.3);
 }
 
 .call-to-action a:hover {
