--- a/public/assets/css/sections/currentEdition.css
+++ b/public/assets/css/sections/currentEdition.css
@@ -8,8 +8,14 @@
     color: rgba(255, 255, 255, 0.9);
 }
 
+#currentEdition h2{
+    padding-bottom: 10px;
+}
+
 #currentEdition p {
    /*color: rgb(52, 52, 52);*/
+   font-size: 1.15em;
+   padding-bottom: 15px;
 }
 
 #currentEdition .currentedition {
