--- a/public/assets/css/sections/lastEdition.css
+++ b/public/assets/css/sections/lastEdition.css
@@ -65,6 +65,7 @@
 .features .single p{
     color: rgba(52, 52, 52, 1);
     text-align: center;
+    font-size: 1.15em;
 }
 
 .features .icon-outer {
