rajout du lien sur le texte Dashbooard
on renvoi a la page d'acceuil du back office

--- a/public/assets/css/pages/backHome.css
+++ b/public/assets/css/pages/backHome.css
@@ -73,6 +73,11 @@
 	padding: 9px 5px;
 	font-size: 20px;
 }
+
+#back-title a {
+	color: white;
+}
+
 #back-organisation {
 	float: left;
 	vertical-align: middle;
