--- a/public/assets/css/sections/classement.css
+++ b/public/assets/css/sections/classement.css
@@ -178,7 +178,7 @@
 
 .cursorProgress{
     position: absolute;
-    left: 100%;
+    /*left: 100%;*/
     top: 50%;
     transform: translateX(-50%) translateY(-50%);
     z-index: 10;
